# petty-cash-cli

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  shell.nix
src/petty_cash_cli/: app.py
